<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    android:touchscreenBlocksFocus="false"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/connectButton"
        android:layout_width="96dp"
        android:layout_height="39dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="32dp"
        android:background="#69BEFF"
        android:text="@string/connect_button"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="550dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#69BFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/insertBox"
        android:layout_width="223dp"
        android:layout_height="56dp"
        android:layout_marginTop="500dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_url"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/connectButton"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/url0"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="480dp"
        android:backgroundTint="#2872CF"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline"
        tools:visibility="visible" />

    <Button
        android:id="@+id/url1"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="360dp"
        android:backgroundTint="#2872CF"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline"
        tools:visibility="visible" />

    <Button
        android:id="@+id/url2"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="240dp"
        android:backgroundTint="#2872CF"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline"
        tools:visibility="visible" />

    <Button
        android:id="@+id/url3"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="#2872CF"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline"
        tools:visibility="visible" />

    <Button
        android:id="@+id/url4"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#2872CF"
        android:textColor="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline"
        tools:visibility="visible" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="114dp"
        android:layout_height="36dp"
        android:layout_marginTop="220dp"
        android:background="#69BEFF"
        android:text="@string/clear"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline" />


</androidx.constraintlayout.widget.ConstraintLayout>